--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -40,6 +40,8 @@ jobs:
         with:
           repository: 1r0b1n0/libros2qt
           path: ros_ws/src
+      - name: Install Qt
+        uses: jurplel/install-qt-action@v3          
       - name: build and test
         uses: ros-tooling/action-ros-ci@master
         with:
