--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -43,7 +43,7 @@ jobs:
       #- name: Install Qt
       #  uses: jurplel/install-qt-action@v3          
       - name: install deps
-        run: sudo apt-get install qt5-default libqt5serialbus5 python3-numpy
+        run: sudo apt-get install qtbase5-dev libqt5serialbus5 python3-numpy
       - name: build and test
         uses: ros-tooling/action-ros-ci@master
         with:
