--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -36,17 +36,11 @@ jobs:
         uses: actions/checkout@v2
         with:
           path: ros_ws/src/ros2_qtcanbus
-      - uses: actions/checkout@v4
-        with:
-          repository: 1r0b1n0/libros2qt
-          path: ros_ws/src/deps/libros2qt
-      #- name: Install Qt
-      #  uses: jurplel/install-qt-action@v3          
       - name: install deps
         run: sudo apt-get -y install qtbase5-dev libqt5serialbus5-dev python3-numpy
       - name: build and test
         uses: ros-tooling/action-ros-ci@master
         with:
-          # package-name: ros2_qtcanbus ros2_qtcanbus_msg
           target-ros2-distro: ${{ matrix.ros_distribution }}
           vcs-repo-file-url: ""
+          skip-tests: true
