--- a/ros2_qtcanbus_msgs/CMakeLists.txt
+++ b/ros2_qtcanbus_msgs/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.8)
-project(ros2_qtcanbus_msg)
+project(ros2_qtcanbus_msgs)
 
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
