config: add twist mapping

--- a/ros2_candecode/config/candecode.yaml
+++ b/ros2_candecode/config/candecode.yaml
@@ -12,3 +12,10 @@ candecode_node:
         altitude: ""
         accuracy: GPSAccuracy04F
         status: ""
+    twist_mapping:
+      frame_id: "base_link"
+      canbus_message_id: 599
+      uom: "kph"
+      field_mapping:
+        linear:
+          x: DI_vehicleSpeed
