--- a/ros2_qtcanbus/package.xml
+++ b/ros2_qtcanbus/package.xml
@@ -13,7 +13,7 @@
 
   <depend>rclcpp</depend>
   <depend>libros2qt</depend>
-  <depend>ros2_qtcanbus_msgs</depend>
+  <depend>can_msgs</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
